--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "jest-watch-typeahead": "0.6.1",
     "joi": "^14.0.1",
     "leaflet": "^1.0.3",
+    "leaflet-draw": "^1.0.4",
     "lint-staged": "^10.5.3",
     "marked": "^4.0.10",
     "mini-css-extract-plugin": "0.11.3",
@@ -77,6 +78,7 @@
     "react-dom": "^18.0.0",
     "react-image": "^1.5.1",
     "react-leaflet": "^4.0.1",
+    "react-leaflet-draw": "^0.20.3",
     "react-portal": "^4.2.0",
     "react-redux": "7.2.8",
     "react-refresh": "^0.8.3",
